<resources>
    <string name="app_name">TodoApp</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start_context">Convenient and productive task manager</string>
    <string name="start_button">Get Started</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign in</string>
    <string name="abc_email_com">abc@email.com</string>
    <string name="your_password">Your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="address">Address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verification">Verification</string>
    <string name="we_ve_send_you_the_verification">We\'ve send you the verification</string>
    <string name="code_on_1_2620_0323_7631">code on +1 2620 0323 7631</string>
    <string name="count_down_one">0:0%1$s</string>
    <string name="count_down_two">0:%1$s</string>
    <string name="re_send">Re-send</string>
    <string name="button_text_continue">continue</string>
    <string name="re_send_code_in">Re-send code in</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_email_address_to">Please enter your email address to</string>
    <string name="request_a_password_reset">request a password reset</string>
    <string name="meeting">Meeting</string>
    <string name="_9_00_am">9:00 AM</string>
    <string name="discuss_team_tasks_for_the_day">Discuss team tasks for the day</string>
    <string name="due_date">%1$s/%2$s/%3$s</string>
</resources>