<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.authentication.resetpasswd.ResetPasswordFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@color/white"
        android:elevation="0dp"
        app:liftOnScroll="true"
        tools:targetApi="lollipop">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:contentScrim="@color/white"
            app:expandedTitleMarginBottom="@dimen/expanded_title_margin_bottom_verification_reset_pass"
            app:expandedTitleMarginStart="@dimen/expanded_title_margin_start_register"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@color/white">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/back"
                app:title="@string/reset_password"
                tools:targetApi="lollipop" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/edge_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnbcereal_w_bk"
                android:foregroundGravity="left"
                android:gravity="start"
                android:text="@string/please_enter_your_email_address_to"
                android:textColor="@color/black"
                android:textSize="@dimen/text_view_text_size_verification_reset_pass" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnbcereal_w_bk"
                android:foregroundGravity="left"
                android:gravity="start"
                android:text="@string/request_a_password_reset"
                android:textColor="@color/black"
                android:textSize="@dimen/text_view_text_size_verification_reset_pass" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MailTextInputLayout"
                style="@style/ThemeOverlay.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="40dp"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/edit_text_border_radius"
                app:boxCornerRadiusBottomStart="@dimen/edit_text_border_radius"
                app:boxCornerRadiusTopEnd="@dimen/edit_text_border_radius"
                app:boxCornerRadiusTopStart="@dimen/edit_text_border_radius"
                app:boxStrokeColor="@color/border_input_text_color"
                app:boxStrokeErrorColor="@color/color_error"
                app:startIconDrawable="@drawable/mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnbcereal_w_bk"
                    android:hint="@string/abc_email_com"

                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/edit_text_padding_horizontal"
                    android:paddingVertical="@dimen/edit_text_padding_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edit_text_text_size_login_register" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/SendButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/button_margin_horizontal_login_register"
                android:layout_marginBottom="20dp"
                android:background="@drawable/corner_button"
                android:drawableEnd="@drawable/enter_arrow_disable_icon"
                android:enabled="false"
                android:fontFamily="@font/airbnbcereal_w_md"
                android:text="@string/send"
                android:textSize="@dimen/button_text_size_login_register"
                app:backgroundTint="@null" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>