<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vungn.todoapp.ui.authentication.verification.contract.VerificationViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".ui.authentication.verification.VerificationFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@color/white"
            android:elevation="0dp"
            app:liftOnScroll="true"
            tools:targetApi="lollipop">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
                app:contentScrim="@color/white"
                app:expandedTitleMarginBottom="@dimen/expanded_title_margin_bottom_verification_reset_pass"
                app:expandedTitleMarginStart="@dimen/expanded_title_margin_start_register"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="@color/white">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    android:elevation="0dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/back"
                    app:title="@string/verification"
                    tools:targetApi="lollipop" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|top"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/edge_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnbcereal_w_bk"
                    android:foregroundGravity="left"
                    android:gravity="start"
                    android:text="@string/we_ve_send_you_the_verification"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_text_size_verification_reset_pass" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnbcereal_w_bk"
                    android:foregroundGravity="left"
                    android:gravity="start"
                    android:text="@string/code_on_1_2620_0323_7631"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_text_size_verification_reset_pass" />

                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="27dp"
                    android:layout_marginBottom="40dp"
                    android:fontFamily="@font/airbnbcereal_w_md"
                    android:textColor="@color/black"
                    app:box_margin_left="10dp"
                    app:box_margin_right="10dp"
                    app:height="@dimen/otp_height"
                    app:length="4"
                    app:otp_box_background="@drawable/corner_otp"
                    app:otp_box_background_active="@drawable/corner_otp_active"
                    app:otp_box_background_inactive="@drawable/corner_otp"
                    app:otp_text_size="@dimen/otp_text_size"
                    app:width="@dimen/otp_width" />

                <Button
                    android:id="@+id/ContinueButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin_horizontal_login_register"
                    android:background="@drawable/corner_button"
                    android:drawableEnd="@drawable/enter_arrow_disable_icon"
                    android:enabled="false"
                    android:fontFamily="@font/airbnbcereal_w_md"
                    android:text="@string/button_text_continue"
                    android:textSize="@dimen/button_text_size_login_register"
                    app:backgroundTint="@null"
                    app:onSafeClick="@{_->viewModel.checkOtp()}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/airbnbcereal_w_bk"
                        android:gravity="end"
                        android:text="@string/re_send_code_in"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_view_text_size_login_register_2" />

                    <TextView
                        android:id="@+id/CountDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/airbnbcereal_w_bk"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/text_view_text_size_login_register_2" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>